--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "modules": "^0.4.0",
     "node": "^19.0.0",
     "react": "^18.2.0",
+    "react-back-to-top-button": "^0.0.14",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
